2002-01-31  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnfolder.el (nnfolder-request-replace-article): Unfold. Don't
	use mail-header-unfold-field.

	* gnus-cache.el (gnus-summary-insert-cached-articles): Use
	gnus-summary-limit.

	* gnus-range.el (gnus-add-to-sorted-list): New function.
	* gnus-sum.el (gnus-mark-article-as-read): Use it.
	(gnus-mark-article-as-unread): Ditto.
	(gnus-summary-mark-article-as-unread): Ditto.
	(gnus-build-get-header): Ditto.
	(gnus-summary-prepare-threads): Ditto.
	(gnus-summary-insert-pseudos): Ditto.
	(gnus-articles-to-read): Use gnus-sorted-union and gnus-sorted-nunion.
	(gnus-summary-insert-new-articles): Use gnus-sorted-nunion.
	(gnus-summary-insert-old-articles): Ditto.

	* gnus-msg.el (gnus-posting-styles): Add new format of header.
	(gnus-configure-posting-styles): Support the new format.

	* mail-source.el (mail-source-bind, mail-source-bind-common): Set
	edebug-form-spec to (sexp body).
	Suggested by Joe Wells <jbw@izanami.cee.hw.ac.uk>.

	* message.el (message-reply-headers): Add doc.

2002-01-30  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-delete-group): Nix the entry in
	gnus-cache-active-hashtb.

	* gnus-agent.el (gnus-agent-mark-unread-afer-downloaded): New variable.
	(gnus-agent-summary-fetch-group): Use it.

	* gnus-msg.el (gnus-debug-files): New variable.
	(gnus-debug-exclude-variables): New variable.
	(gnus-debug): Use them.

	* gnus-range.el (gnus-range-length): Don't use gnus-uncompress-range.

2002-01-30  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-cite-prefix-regexp): Use text-mode-syntax-table.
	(message-mode-syntax-table): Move back the previous position.

	* nnagent.el (nnagent-retrieve-headers): Use gnus-sorted-difference.

	* gnus-agent.el (gnus-agent-retrieve-headers): Use
	gnus-sorted-difference.

	* nnsoup.el (nnsoup-request-expire-articles): Use
	gnus-sorted-difference.

	* nnheader.el: Autoload gnus-sorted-difference.
