@@ -250,8 +250,11 @@ will not be substituted.")
 	(when charset
 	  (delete-region (point-min) (point-max))
 	  (insert (mm-decode-string text charset)))
-	(let ((w3m-safe-url-regexp "\\`cid:")
-	      (w3m-display-inline-images mm-inline-text-html-with-images))
+	(let ((w3m-safe-url-regexp (if mm-inline-text-html-with-images
+				       nil
+				     "\\`cid:"))
+	      (w3m-display-inline-images mm-inline-text-html-with-images)
+	      w3m-force-redisplay)
 	  (w3m-region (point-min) (point-max)))
 	(when mm-inline-text-html-with-w3m-keymap
 	  (add-text-properties
